# FnPlot

./: CMakeLists.txt  dataset.cpp  dataset.h  dlLoader.hpp  libGenerator.cpp  libGenerator.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
